--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Learning Typescript</title>
-    <script src="./dist/src/9 - DOM.js"></script>
+    <title>Color Switcher</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Learning Typescript</h1>
-    <br />
-    <div id="display-div"></div>
-    <script>
-      let res = prompt("Who are you?");
-      document.getElementById("display-div").innerHTML = getMessage(res);
-    </script>
+    <nav>
+      <div class="nav-center">
+        <h4>Color Switcher</h4>
+        <ul class="nav-links">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main>
+      <div class="container">
+        <h2>Background Color: <span class="color"> #f1f5f8 </span></h2>
+      </div>
+      <button class="btn btn-hero" id="btn">Generate Color</button>
+    </main>
+    <script src="../../dist/src/colorSwitcher/app.js"></script>
   </body>
 </html>
